Initial commit for canvas support in CresStreamSvc/csio.  Code review rsecco OMAPJB-504
git-svn-id: svn://linux2/subversion/Crestron/Android_tst600/trunk/customFiles/src/external/crestron/CresStreamSvc@346516 634c09e3-b06c-4293-a491-0870fed93cb0